@@ -288,6 +288,7 @@ plot_detect <- function(se) {
 #'
 #' @param se SummarizedExperiment,
 #' Data object with missing values.
+#' @param cluster_columns clustering columns or not. default TRUE.
 #' @return A heatmap indicating whether values are missing (0) or not (1)
 #' (generated by \code{\link[ComplexHeatmap]{Heatmap}}).
 #' @examples
@@ -307,7 +308,7 @@ plot_detect <- function(se) {
 #' # Plot missing values heatmap
 #' plot_missval(filt)
 #' @export
-plot_missval <- function(se) {
+plot_missval <- function(se, cluster_columns=TRUE) {
     # Show error if input is not the required classes
     assertthat::assert_that(inherits(se, "SummarizedExperiment"))
 
@@ -322,12 +323,17 @@ plot_missval <- function(se) {
     df <- se_assay %>% data.frame(.)
     missval <- df[apply(df, 1, function(x) any(is.na(x))), ]
     missval <- ifelse(is.na(missval), 0, 1)
+    
+    # all protein used
+    # missval <- as.matrix(df); missval[is.na(missval)]=0; missval[missval!=0]=1
+    
     # Plot binary heatmap
     ht2 = Heatmap(missval,
       col = c("white", "black"),
       column_names_side = "top",
       show_row_names = FALSE,
       show_column_names = TRUE,
+      cluster_columns=cluster_columns,
       name = "Missing values pattern",
       column_names_gp = gpar(fontsize = 16),
       heatmap_legend_param = list(at = c(0, 1),
